<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sshmediaplayer</string>
     <string name="action_settings">Settings</string>


    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="next">next</string>
    <string name="prev">previous</string>

    <string name="network_settings">Network-Settings (SSH)</string>
    <string name="remote_host_ip">Remote Host IP</string>
    <string name="remote_host_port">Remote Host Port</string>
    <string name="ssl_password">SSH Password</string>
    <string name="ssl_username">SSH Username</string>

    <string name="application_settings">Application-Settings</string>
    <string name="get_status">Get Status</string>
    <string name="status_refresh_rate">Status Refresh Rate</string>



</resources>
